--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -102,11 +102,11 @@
         </li>
         <!-- END Alert menu-->
         <!-- START Offsidebar button-->
-        <li class="nav-item">
+        <!-- <li class="nav-item">
             <a class="nav-link" (click)="toggleOffsidebar(); $event.stopPropagation()">
                 <em class="icon-notebook"></em>
             </a>
-        </li>
+        </li> -->
         <!-- END Offsidebar menu-->
     </ul>
     <!-- END Right Navbar-->
