--- a/FrontEnd/src/app/layout/sidebar/userblock/userblock.component.html
+++ b/FrontEnd/src/app/layout/sidebar/userblock/userblock.component.html
@@ -8,7 +8,7 @@
     </div>
     <!-- Name and Job-->
     <div class="user-block-info">
-        <span class="user-block-name">{{ 'sidebar.WELCOME' | translate }} {{perdorues?.emer}} {{perdorues?.mbiemer}}</span>
+        <span class="user-block-name">{{perdorues?.emer}} {{perdorues?.mbiemer}}</span>
         <!-- <span class="user-block-role">
             <a [routerLink]="'/personal/profile'">Profile</a>
         </span> -->
