--- a/FrontEnd/src/app/routes/github/activity/activity.component.html
+++ b/FrontEnd/src/app/routes/github/activity/activity.component.html
@@ -1,8 +1,8 @@
-<ag-grid-angular 
+<!-- <ag-grid-angular 
     style="width: auto; height: 800px;" 
     class="ag-theme-balham"
     [rowData]="tableRowData" 
     [columnDefs]="tableColumnDefs"
     >
-</ag-grid-angular>
+</ag-grid-angular> -->
 <pre>{{commits[0] |json}}</pre>
