--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -1,3 +1,3 @@
 <span>&copy; {{settings.getAppSetting('year')}} - {{ ndermarrje?.emer || settings.getAppSetting('emer') }} :
     V{{settings.getAppSetting('version')}}</span>
-    <span class="float-right d-none d-sm-block d-sm-none d-md-block">Powered by {{settings.getAppSetting('emer')}}</span>
+    <span class="float-right d-none d-sm-block d-sm-none d-md-block">Powered by <a href="https://microservices.al" target="_blank">{{settings.getAppSetting('emer')}}</a></span>
