--- a/FrontEnd/src/app/routes/home/home/home.component.html
+++ b/FrontEnd/src/app/routes/home/home/home.component.html
@@ -1,65 +1,80 @@
-<div class="content-heading">
-    <!-- <div>
+<div *ngIf="!eshteMekanik">
+    <div class="content-heading">
+        <!-- <div>
         Dashboard
         <small>Mirëseerdhët!</small>
     </div> -->
-    <button class="btn btn-labeled btn-secondary">
-        <span class="btn-label">
-            <i class="fas fa-file-medical-alt"></i>
-        </span>
-        Urdhër Diagnoze
-    </button>
-</div>
+        <button class="btn btn-labeled btn-secondary mr-2" (click)="showUrdherDiag = !showUrdherDiag">
+            <span class="btn-label">
+                <i class="fas fa-file-medical-alt"></i>
+            </span>
+            Urdhër Diagnoze
+        </button>
+        <button class="btn btn-labeled btn-secondary mr-2" (click)="showUrdherPune = !showUrdherPune">
+            <span class="btn-label">
+                <i class="fas fa-wrench"></i>
+            </span>
+            Urdhër Pune
+        </button>
+    </div>
+    <!-- Urdher Diagnoze -->
+    <app-urdher-diagnoze [showUrdherDiag]="showUrdherDiag" (hapMbyllUDNgaSelf)="hapMbyllNgaUDChild($event)"
+        (shtoUrdheraDiag)="shtoUrdheraDiag($event)"></app-urdher-diagnoze>
+    <!-- End Urdher Diagnoze -->
+    <!-- Urdher Pune -->
+    <app-urdher-pune [showUrdherPune]="showUrdherPune" (hapMbyllUPNgaSelf)="hapMbyllNgaUPChild($event)"
+        (shtoUrdheraPune)="shtoUrdheraPune($event)" width="500px"></app-urdher-pune>
+    <!-- End Urdher Pune -->
+    <!-- START cards box-->
+    <div class="row">
+        <div class="col-xl-3 col-md-6">
 
-<!-- START cards box-->
-<div class="row">
-    <div class="col-xl-3 col-md-6">
-
-        <!-- START card-->
-        <div class="card flex-row align-items-center align-items-stretch border-0">
-            <div class="col-4 d-flex align-items-center bg-primary-dark justify-content-center rounded-left">
-                <em class="fas fa-parking fa-3x"></em>
-            </div>
-            <div class="col-8 py-1 rounded-right">
-                <div class="h2 mt-0">42</div>
-                <div class="text-uppercase"><small>Mjete në park</small></div>
-            </div> 
-        </div>
-    </div>
-    <div class="col-xl-3 col-md-6">
-        <!-- START card-->
-        <div class="card flex-row align-items-center align-items-stretch border-0">
-            <div class="col-4 d-flex align-items-center bg-purple-dark justify-content-center rounded-left">
-                <!-- <em class="icon-globe fa-3x"></em> -->
-                <img src="assets/img/repairing.png" />
-            </div>
-            <div class="col-8 py-1 rounded-right">
-                <div class="h2 mt-0">10</div>
-                <div class="text-uppercase"><small>Mjete në oficinë</small></div>
+            <!-- START card-->
+            <div class="card flex-row align-items-center align-items-stretch border-0">
+                <div class="col-4 d-flex align-items-center bg-primary-dark justify-content-center rounded-left">
+                    <em class="fas fa-parking fa-3x"></em>
+                </div>
+                <div class="col-8 py-1 rounded-right">
+                    <div class="h2 mt-0">42</div>
+                    <div class="text-uppercase"><small>Mjete në park</small></div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-xl-3 col-md-6">
-        <!-- START card-->
-        <div class="card flex-row align-items-center align-items-stretch border-0">
-            <div class="col-4 d-flex align-items-center bg-warning-dark justify-content-center rounded-left">
-                <em class="fas fa-users-cog fa-3x"></em>
-            </div>
-            <div class="col-8 py-1 rounded-right">
-                <div class="h2 mt-0">14</div>
-                <div class="text-uppercase"><small>Urdhëra pune të pa mbaruar</small></div>
+        <div class="col-xl-3 col-md-6">
+            <!-- START card-->
+            <div class="card flex-row align-items-center align-items-stretch border-0">
+                <div class="col-4 d-flex align-items-center bg-purple-dark justify-content-center rounded-left">
+                    <!-- <em class="icon-globe fa-3x"></em> -->
+                    <img src="assets/img/repairing.png" />
+                </div>
+                <div class="col-8 py-1 rounded-right">
+                    <div class="h2 mt-0">10</div>
+                    <div class="text-uppercase"><small>Mjete në oficinë</small></div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-xl-3 col-md-6">
-        <!-- START card-->
-        <div class="card flex-row align-items-center align-items-stretch border-0">
-            <div class="col-4 d-flex align-items-center bg-success-dark justify-content-center rounded-left">
-                <em class="fas fa-users fa-3x"></em>
+        <div class="col-xl-3 col-md-6">
+            <!-- START card-->
+            <div class="card flex-row align-items-center align-items-stretch border-0">
+                <div class="col-4 d-flex align-items-center bg-warning-dark justify-content-center rounded-left">
+                    <em class="fas fa-users-cog fa-3x"></em>
+                </div>
+                <div class="col-8 py-1 rounded-right">
+                    <div class="h2 mt-0">14</div>
+                    <div class="text-uppercase"><small>Punë të pa mbaruara</small></div>
+                </div>
             </div>
-            <div class="col-8 py-1 rounded-right">
-                <div class="h2 mt-0">25</div>
-                <div class="text-uppercase"><small>Personel prezent</small></div>
+        </div>
+        <div class="col-xl-3 col-md-6">
+            <!-- START card-->
+            <div class="card flex-row align-items-center align-items-stretch border-0">
+                <div class="col-4 d-flex align-items-center bg-success-dark justify-content-center rounded-left">
+                    <em class="fas fa-user-md fa-3x"></em>
+                </div>
+                <div class="col-8 py-1 rounded-right">
+                    <div class="h2 mt-0">{{urdheraDiagnoze?.length || 0}}</div>
+                    <div class="text-uppercase"><small>Diagnoza Aktive</small></div>
+                </div>
             </div>
         </div>
     </div>
@@ -83,7 +98,7 @@
 
 
 
-<!-- <div class="home-container">
+<div class="home-container" *ngIf="eshteMekanik">
     <div class="jumbotron">
         <div class="row">
             <div class="col-xl-3 col-lg-4">
@@ -101,4 +116,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
