--- a/FrontEnd/src/app/shared/components/urdher-diagnoze/urdher-diagnoze.component.html
+++ b/FrontEnd/src/app/shared/components/urdher-diagnoze/urdher-diagnoze.component.html
@@ -1,6 +1,8 @@
 <div class="draggable-box" cdkDrag *ngIf="showUrdherDiag">
     <div class="draggable-handle" cdkDragHandle>
-        <span class="float-left ml-3">Urdhër Diagnoze</span>
+        <span class="float-left ml-3 mr-1">Urdhër Diagnoze</span>
+        <span class="float-left text-primary">{{ urdherDiag?.mjeti?.brand }}</span><span
+            class="ml-1">{{ urdherDiag?.mjeti?.targa }}</span>
         <button type="button" class="close mr-3" aria-label="Close" (click)="toggle()">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -9,103 +11,126 @@
     <form class="form-horizontal m-3" [formGroup]="urdheDiagForm"
         (submit)="regUrdherDiagnoze($event, urdheDiagForm.value)">
         <div class="form-group row">
-            <div class="col-9">
-                <ng-template #rt let-r="result" let-t="term">
-                    <ngb-highlight [result]="r.emer" [term]="t"></ngb-highlight>
-                </ng-template>
-                <input id="typeahead-template" type="text" class="form-control" [ngbTypeahead]="search"
-                    (focus)="focus$.next($event.target.value)" (click)="click$.next($event.target.value)"
-                    [resultTemplate]="rt" [inputFormatter]="formatter" #instance="ngbTypeahead"
-                    placeholder="Zgjidh klientin" formControlName="klient" />
-                <!-- <input class="form-control" type="text" formControlName="klient" placeholder="Klienti"
-                    autocomplete="off" /> -->
+            <label class="text-bold col-3 col-form-label text-right" for="emer">Klienti</label>
+            <div class="col-7">
+                <div class="input-group with-focus input-group-sm">
+                    <ng-template #rt let-r="result" let-t="term">
+                        <ngb-highlight [result]="r.emer" [term]="t"></ngb-highlight>
+                    </ng-template>
+                    <input id="klientiId" type="text" class="form-control" [ngbTypeahead]="search"
+                        (focus)="focus$.next($event.target.value)" (click)="click$.next($event.target.value)"
+                        [resultTemplate]="rt" [inputFormatter]="formatter" #instance="ngbTypeahead"
+                        placeholder="Zgjidh klientin" formControlName="klient" />
+                    <div class="input-group-append" (click)="clearKlient()">
+                        <a class="input-group-text bg-transparent border-left-0" title="Pastro fushën">
+                            <em
+                                [ngClass]="{'fas fa-circle text-muted': urdherDiag?.id, 'fa fa-window-close': !urdherDiag?.id }"></em>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="col-1">
-                <button class="btn btn-primary" type="submit" title="Regjistro klient të ri" (click)="showNewKlient = !showNewKlient" >
+                <button class="btn btn-primary" type="button" title="Regjistro klient të ri"
+                    (click)="showNewKlient = !showNewKlient" [disabled]="urdherDiag?.id">
                     <i class="fas fa-angle-double-right"></i>
                 </button>
             </div>
         </div>
         <div class="form-group row">
-            <div class="col-9">
-                <select class="form-control" formControlName="perfaqesues">
-                    <option [selected]="true" [disabled]="true" [value]="null">Përfaqesuesi</option>
-                    <option *ngFor="let perfaqesues of perfaqesuesitEklientit" [value]="perfaqesues?.id">
+            <label class="text-bold col-3 col-form-label text-right" for="emer">Përfaqësuesi</label>
+            <div class="col-7">
+                <select class="form-control" formControlName="perfaqesues" [compareWith]="compareFn">
+                    <option [ngValue]="null" disabled [selected]="true" *ngIf="!urdherDiag?.id">Zgjidh</option>
+                    <option *ngFor="let perfaqesues of perfaqesuesitEklientit" [ngValue]="perfaqesues">
                         {{perfaqesues?.emer}}</option>
                 </select>
-                <!-- <input class="form-control" type="text" formControlName="perfaqesues" placeholder="Përfaqesuesi"
-                    autocomplete="off" /> -->
             </div>
             <div class="col-1">
-                <button class="btn btn-primary" type="submit" title="Regjistro perfaqesues për këtë klient" (click)="showNewPerfaqesues = !showNewPerfaqesues" [disabled]="!klientIzgjedhur">
+                <button class="btn btn-primary" type="button" title="Regjistro perfaqesues për këtë klient"
+                    (click)="showNewPerfaqesues = !showNewPerfaqesues" [disabled]="!klientIzgjedhur">
                     <i class="fas fa-angle-double-right"></i>
                 </button>
             </div>
         </div>
         <div class="form-group row">
-            <div class="col-9">
-                <select class="form-control" formControlName="mjeti">
-                    <option [selected]="true" [disabled]="true" [value]="null">Mjeti</option>
-                    <option *ngFor="let mjeti of mjetetEklientit" [value]="mjeti?.id">{{mjeti?.brand}} | {{mjeti?.targa}}
+            <label class="text-bold col-3 col-form-label text-right" for="emer">Mjeti</label>
+            <div class="col-7">
+                <select class="form-control" formControlName="mjeti" [compareWith]="compareFn">
+                    <option [ngValue]="null" disabled [selected]="true" *ngIf="!urdherDiag?.id">Zgjidh</option>
+                    <option *ngFor="let mjeti of mjetetEklientit" [ngValue]="mjeti">{{mjeti?.brand}} |
+                        {{mjeti?.targa}}
                     </option>
                 </select>
-                <!-- <input class="form-control" type="text" formControlName="mjeti" placeholder="Mjeti"
-                    autocomplete="off" /> -->
             </div>
             <div class="col-1">
-                <button class="btn btn-primary" type="submit" title="Regjistro mjet të ri për këtë klient" (click)="showNewMjet = !showNewMjet" [disabled]="!klientIzgjedhur">
+                <button class="btn btn-primary" type="button" title="Regjistro mjet të ri për këtë klient"
+                    (click)="showNewMjet = !showNewMjet" [disabled]="!klientIzgjedhur || urdherDiag?.id">
                     <i class="fas fa-angle-double-right"></i>
                 </button>
             </div>
         </div>
         <div class="form-group row">
-            <div class="col-9">
-                <select class="form-control" formControlName="destinuarPer">
-                    <option [selected]="true" [disabled]="true" [value]="null">Për punonjësin</option>
-                    <option *ngFor="let perdorues of perdoruesit" [value]="perdorues?.id">{{perdorues?.emer}}
+            <label class="text-bold col-3 col-form-label text-right" for="emer">Punonjësi</label>
+            <div class="col-7">
+                <select class="form-control" formControlName="destinuarPer" [compareWith]="compareFn">
+                    <option [ngValue]="null" disabled [selected]="true" *ngIf="!urdherDiag?.id">Zgjidh</option>
+                    <option *ngFor="let perdorues of perdoruesit" [ngValue]="perdorues">{{perdorues?.emer}}
                         {{perdorues?.mbiemer}}</option>
                 </select>
-                <!-- <input class="form-control" type="text" formControlName="destinuarPer" placeholder="Për punonjësin"
-                    autocomplete="off" /> -->
             </div>
             <div class="col-1">
-                <button class="btn btn-primary" type="submit" title="Regjistro punonjës të ri" (click)="showNewPerdorues = !showNewPerdorues" [disabled]="!klientIzgjedhur">
+                <button class="btn btn-primary" type="button" title="Regjistro punonjës të ri"
+                    (click)="showNewPerdorues = !showNewPerdorues" [disabled]="!klientIzgjedhur">
                     <i class="fas fa-angle-double-right"></i>
                 </button>
             </div>
         </div>
         <div class="form-group row">
             <div class="col-12">
-                <textarea rows="2" class="form-control" formControlName="pershkrim"
+                <textarea rows="4" class="form-control" formControlName="pershkrim"
                     placeholder="Pershkrim i simptomave"></textarea>
             </div>
         </div>
         <div class="form-group row">
             <div class="col-12">
                 <input type="range" class="form-control-range" id="formControlRange" formControlName="prioriteti"
-                    min="0" max="10">
+                    min="1" max="3">
             </div>
             <span class="ml-3">
-                Prioriteti: {{(prioriteti > 0 && prioriteti) <= 2 ? 'Ska rëndësi' : (prioriteti > 2 && prioriteti) <= 4 ? 'Pret Puna' : (prioriteti > 4 && prioriteti <= 6) ? 'Normal' : (prioriteti > 6 && prioriteti <= 8) ? 'I lartë' : 'Shumë i lartë'}}
+                <!-- {{(prioriteti === 0) ? 0 : (prioriteti > 0 && prioriteti) <= 2 ? 'S\'ka rëndësi' : (prioriteti > 2 && prioriteti) <= 4 ? 'Pret Puna' : (prioriteti > 4 && prioriteti <= 6) ? 'Normal' : (prioriteti > 6 && prioriteti <= 8) ? 'I lartë' : 'Shumë i lartë'}} -->
+                Prioriteti:
+                {{prioriteti === 1 ? 'i Ulët' : prioriteti === 2 ? 'Normal' : prioriteti === 3 ? 'i Lartë' : ''}}
             </span>
         </div>
         <div class="form-group row">
             <div class="col-12">
-                <button class="btn btn-sm btn-secondary mr-2" type="submit">Ruaj</button>
-                <button class="btn btn-sm btn-secondary" type="button" (click)="toggle()">Mbyll</button>
+                <button class="btn btn-sm btn-danger mr-2" type="button" *ngIf="urdherDiag?.id"
+                    (click)="fshiKonfirm = !fshiKonfirm">Fshije</button>
+                <span class="block" *ngIf="fshiKonfirm">
+                    <button class="btn btn-warning btn-xs mr-1" type="button"
+                        (click)="deleteUrdherDiagnoze(urdherDiag)">Po</button>
+                    <button class="btn btn-info btn-xs" type="button" (click)="fshiKonfirm = !fshiKonfirm">Jo</button>
+                </span>
+                <button class="btn btn-sm btn-secondary float-right" type="button" (click)="toggle()">Mbyll</button>
+                <button class="btn btn-sm btn-secondary mr-2 float-right" type="submit">Ruaj</button>
             </div>
         </div>
     </form>
 </div>
 <!-- new klient Form -->
-<app-new-klient [showNewKlient]="showNewKlient" (hapMbyllNKNgaSelf)="hapMbyllNgaNKChild($event)" (shtoKlient)="shtoKlient($event)"></app-new-klient>
+<app-new-klient [showNewKlient]="showNewKlient" (hapMbyllNKNgaSelf)="hapMbyllNgaNKChild($event)"
+    (shtoKlient)="shtoKlient($event)"></app-new-klient>
 <!-- End new klient Form -->
 <!-- new Perfaqesues Form -->
-<app-new-perfaqesues [showNewPerfaqesues]="showNewPerfaqesues" [klient]="klient" (hapMbyllNPFNgaSelf)="hapMbyllNgaNPFChild($event)" (shtoPerfaqesues)="shtoPerfaqesues($event)"></app-new-perfaqesues>
+<app-new-perfaqesues [showNewPerfaqesues]="showNewPerfaqesues" [klient]="klient"
+    (hapMbyllNPFNgaSelf)="hapMbyllNgaNPFChild($event)" (shtoPerfaqesues)="shtoPerfaqesues($event)">
+</app-new-perfaqesues>
 <!-- End new Perfaqesues Form -->
 <!-- new Mjet Form -->
-<app-new-mjet [showNewMjet]="showNewMjet" [klient]="klient"  (hapMbyllNMNgaSelf)="hapMbyllNgaNMChild($event)" (shtoMjet)="shtoMjet($event)"></app-new-mjet>
+<app-new-mjet [showNewMjet]="showNewMjet" [klient]="klient" (hapMbyllNMNgaSelf)="hapMbyllNgaNMChild($event)"
+    (shtoMjet)="shtoMjet($event)"></app-new-mjet>
 <!-- End new Mjet Form -->
 <!-- new Perdorues Form -->
-<app-new-perdorues [showNewPerdorues]="showNewPerdorues" (hapMbyllNPNgaSelf)="hapMbyllNgaNPChild($event)" (shtoPerdorues)="shtoPerdorues($event)"></app-new-perdorues>
+<app-new-perdorues [showNewPerdorues]="showNewPerdorues" (hapMbyllNPNgaSelf)="hapMbyllNgaNPChild($event)"
+    (shtoPerdorues)="shtoPerdorues($event)"></app-new-perdorues>
 <!-- End new Perdorues Form -->
