NewUrdherDiag Completed. RT Push to mekanik Done!

--- a/FrontEnd/src/app/routes/home/home/home.component.html
+++ b/FrontEnd/src/app/routes/home/home/home.component.html
@@ -18,9 +18,9 @@
         </button>
     </div>
     <!-- Urdher Diagnoze -->
-    <app-urdher-diagnoze [showUrdherDiag]="showUrdherDiag" [urdherDiag]="urdherDiag"
+    <app-new-urdher-diag [showUrdherDiag]="showUrdherDiag" [urdherDiag]="urdherDiag"
         (hapMbyllUDNgaSelf)="hapMbyllNgaUDChild($event)" (shtoUrdheraDiag)="shtoUrdheraDiag($event)">
-    </app-urdher-diagnoze>
+    </app-new-urdher-diag>
     <!-- End Urdher Diagnoze -->
     <!-- Urdher Pune -->
     <app-urdher-pune [showUrdherPune]="showUrdherPune" (hapMbyllUPNgaSelf)="hapMbyllNgaUPChild($event)"
